--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#-------------------------------------
+#              MySQL
+#-------------------------------------
+spring.datasource.url=jdbc:mysql://localhost:3306/swimming_pool?useSSL=false&true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Wezniesql1
 
+#-------------------------------------
+#              Hibernate
+#-------------------------------------
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.hibernate.ddl-auto=update
+
+#-------------------------------------
+#              Spring
+#-------------------------------------
+server.port=8080
